feature:update avatar
